--- a/CreateModels/Resources/UI/qSlicerCreateModelsModule.ui
+++ b/CreateModels/Resources/UI/qSlicerCreateModelsModule.ui
@@ -134,7 +134,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Create needleeeeee</string>
+            <string>Create needle</string>
            </property>
           </widget>
          </item>
