Add switch module button

--- a/PivotCalibration/Resources/UI/qSlicerPivotCalibrationModule.ui
+++ b/PivotCalibration/Resources/UI/qSlicerPivotCalibrationModule.ui
@@ -27,8 +27,8 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="ctkCollapsibleButton" name="IOCollapsibleButton">
-     <property name="text">
+    <widget class="ctkCollapsibleButton" name="IOCollapsibleButton" native="true">
+     <property name="text" stdset="0">
       <string>IO</string>
      </property>
      <layout class="QFormLayout" name="formLayout">
@@ -43,8 +43,8 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="qMRMLNodeComboBox" name="InputComboBox">
-        <property name="nodeTypes">
+       <widget class="qMRMLNodeComboBox" name="InputComboBox" native="true">
+        <property name="nodeTypes" stdset="0">
          <stringlist>
           <string>vtkMRMLLinearTransformNode</string>
          </stringlist>
@@ -59,13 +59,13 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="qMRMLNodeComboBox" name="OutputComboBox">
-        <property name="nodeTypes">
+       <widget class="qMRMLNodeComboBox" name="OutputComboBox" native="true">
+        <property name="nodeTypes" stdset="0">
          <stringlist>
           <string>vtkMRMLLinearTransformNode</string>
          </stringlist>
         </property>
-        <property name="renameEnabled">
+        <property name="renameEnabled" stdset="0">
          <bool>true</bool>
         </property>
        </widget>
@@ -74,8 +74,8 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="ControlCollapsibleButton">
-     <property name="text">
+    <widget class="ctkCollapsibleButton" name="ControlCollapsibleButton" native="true">
+     <property name="text" stdset="0">
       <string>Controls</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -89,17 +89,17 @@
          </widget>
         </item>
         <item>
-         <widget class="ctkDoubleSpinBox" name="startupTimerEdit">
-          <property name="decimals">
+         <widget class="ctkDoubleSpinBox" name="startupTimerEdit" native="true">
+          <property name="decimals" stdset="0">
            <number>0</number>
           </property>
-          <property name="minimum">
+          <property name="minimum" stdset="0">
            <double>0.000000000000000</double>
           </property>
-          <property name="maximum">
+          <property name="maximum" stdset="0">
            <double>30.000000000000000</double>
           </property>
-          <property name="value">
+          <property name="value" stdset="0">
            <double>5.000000000000000</double>
           </property>
          </widget>
@@ -116,17 +116,17 @@
          </widget>
         </item>
         <item>
-         <widget class="ctkDoubleSpinBox" name="durationTimerEdit">
-          <property name="decimals">
+         <widget class="ctkDoubleSpinBox" name="durationTimerEdit" native="true">
+          <property name="decimals" stdset="0">
            <number>0</number>
           </property>
-          <property name="minimum">
+          <property name="minimum" stdset="0">
            <double>3.000000000000000</double>
           </property>
-          <property name="maximum">
+          <property name="maximum" stdset="0">
            <double>60.000000000000000</double>
           </property>
-          <property name="value">
+          <property name="value" stdset="0">
            <double>5.000000000000000</double>
           </property>
          </widget>
@@ -167,6 +167,19 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="switchModuleButton">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Start collecting data for spin calibration. The calibration will be computed and orientation will be appropriately flipped on completion.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="text">
+         <string>Next step</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="ctkCollapsibleGroupBox" name="settingsGroupBox">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
@@ -180,7 +193,7 @@
         <property name="checked">
          <bool>false</bool>
         </property>
-        <property name="collapsed">
+        <property name="collapsed" stdset="0">
          <bool>true</bool>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -237,8 +250,8 @@
     </widget>
    </item>
    <item>
-    <widget class="ctkCollapsibleButton" name="DisplayCollapsibleButton">
-     <property name="text">
+    <widget class="ctkCollapsibleButton" name="DisplayCollapsibleButton" native="true">
+     <property name="text" stdset="0">
       <string>Results</string>
      </property>
      <layout class="QFormLayout" name="formLayout_3">
