Update Switch module flow

--- a/CreateModels/Resources/UI/qSlicerCreateModelsModule.ui
+++ b/CreateModels/Resources/UI/qSlicerCreateModelsModule.ui
@@ -147,7 +147,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Next step</string>
+            <string>Next step - Pivot Calibration</string>
            </property>
           </widget>
          </item>
